# lidar_detector_pkg

./: .zshrc  install.sh  launch_lidar_detector  lidar_det.sh  package.xml  readme.md  setup.cfg  setup.py
config/: lidar_detector_pkg.config.yaml
launch/: lidar_detect.launch.py
lidar_detector_pkg/: lidar_detector_node.py  proyection_node.py
model/: pointpillars_hv_secfpn_8xb6-160e_kitti-3d-3class.py
scripts/: coordinate_transformation.py  proyector.py
