<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_detector_pkg</name>
  <version>0.0.1</version>
  <description>This package aims to create a solid lidar-only-based 3d detector for pedestrian, car and ciclyst classes from kitti dataset using a PointPillars model</description>
  <maintainer email="ernestoroque777@gmail.com">ernstmv</maintainer>
  <license>MIT</license>

  <depend>markerarraystamped</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
